# V2Ray-Subscription-Manager

./: .gitignore  README.md  app.py  app_factory.py  config.py  database.py  implementation_plan.md  install.sh  requirements.txt  test_integration.py  v2ray-sub  v2ray-sub.service
13-7-2026/: app.py
V2RayDAR-main/: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  configs.example.yaml  install.ps1  install.sh
V2RayDAR-main/.github/workflows/: release.yml
V2RayDAR-main/docs/: README.fa.md  README.fr.md  README.ru.md  README.zh-CN.md  guide.md  release.md  worker_contract.md
V2RayDAR-main/src/: clash.rs  config.rs  constants.rs  convert.rs  db.rs  geoip.rs  main.rs  model.rs  network.rs  paths.rs  probe.rs  proxy.rs  server.rs  sing_box.rs  subscription.rs  terminal.rs  tui.rs  worker.rs
V2RayDAR-main/src/parser/: html.rs  mod.rs  xray.rs
V2RayDAR-main/src/tui/: action_handlers.rs  config_editor.rs  config_panel.rs  draw.rs  events.rs  firewall.rs  footer.rs  found_panel.rs  input_handlers.rs  layout.rs  logs_panel.rs  main_menu_panel.rs  open_config.rs  setup.rs  state.rs  subscriptions_panel.rs  top.rs  util.rs  view.rs
routes/: admin_api.py  admin_pages.py
services/: config_service.py  path_service.py  statistics_service.py
templates/: admin.html  login.html
utils/: constants.py
v2raysub/: .gitignore  CHANGELOG.md  CLAUDE.md  DEVICE_LIMIT_ROADMAP.md  README.md  SESSION_SUMMARY_user-management.md  USER_MANAGEMENT_ROADMAP.md  VERSIONING.md  app_factory.py  config.py  database.py  extensions.py  install.sh  requirements.txt  (+5 more)
(+23 files in other folders)
